<resources>
    <string name="app_name">Layouts</string>
    <string name="title">Hitman: Contracts</string>
    <string name="publisher">Publisher:</string>
    <string name="publisher_name">Eidos Interactive</string>
    <string name="genre">Genre:</string>
    <string name="genre_name">Shooter</string>
    <string name="release">Release Date:</string>
    <string name="release_date">Apr 20, 2004 - PlayStation 2, Xbox ,PC (Microsoft Windows)</string>
    <string name="player_rating">Player Rating:</string>
    <string name="rating">79/100</string>
    <string name="critics_rating">Critics Rating:</string>
    <string name="rating1">70/100</string>
    <string name="about">About:</string>
    <string name="about_detail">Hitman: Contracts is a stealth action game developed by IO Interactive and published by Eidos Interactive. It is the third installment in the Hitman game series. The game features recreations of four levels from Hitman: Codename 47.</string>
    <string name="story">Story:</string>
    <string name="story_detail">The game begins in Paris as a wounded Agent 47 finds himself trapped in a dingy hotel room.

As he lapses in and out of consciousness he experiences flashbacks from some of his most harrowing missions. Hitman Contracts explores the darker psychology of killing for a living and is our most graphic effort yet in the series. Hitman Contracts delivers more action-packed and suspense-filled missions with a greater variety of ways to make the perfect kill.

An increased arsenal of firearms, close combat weapons and new ‘take-down’ moves will be at your disposal allowing you to perform a wide range of brutal ‘hits’. The game features 12 levels set in various locations where you must come face to face with some of the world’s most dangerous criminals and high profile targets.</string>


</resources>


