<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/image_hitman"
        android:layout_width="435dp"
        android:layout_height="137dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/hitman" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/publisher_name"
            android:layout_width="match_parent"
            android:layout_toEndOf="@+id/publisher"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/publisher_name"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/publisher"/>
        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_toEndOf="@+id/release"
            android:layout_below="@+id/publisher_name"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/player_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_rating"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/release_date"/>
        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_below="@+id/release_date"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/critics_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critics_rating"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/player_rating"/>
        <TextView
            android:id="@+id/rating1"
            android:layout_width="match_parent"
            android:layout_below="@+id/player_rating"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textSize="18sp" />


    </RelativeLayout>



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_detail"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story_detail"
                android:textSize="16sp"/>



        </LinearLayout>





        </ScrollView>







</LinearLayout>